--- a/.hintrc
+++ b/.hintrc
@@ -15,6 +15,13 @@
       {
         "label": "off"
       }
+    ],
+    "no-inline-styles": "off",
+    "axe/language": [
+      "default",
+      {
+        "html-has-lang": "off"
+      }
     ]
   }
 }
