--- a/.hintrc
+++ b/.hintrc
@@ -23,6 +23,14 @@
       {
         "html-has-lang": "off"
       }
+    ],
+    "compat-api/html": [
+      "default",
+      {
+        "ignore": [
+          "iframe[allow]"
+        ]
+      }
     ]
   }
 }
