--- a/.hintrc
+++ b/.hintrc
@@ -31,6 +31,18 @@
           "iframe[allow]"
         ]
       }
+    ],
+    "axe/structure": [
+      "default",
+      {
+        "list": "off"
+      }
+    ],
+    "axe/name-role-value": [
+      "default",
+      {
+        "link-name": "off"
+      }
     ]
   }
 }
