--- a/.hintrc
+++ b/.hintrc
@@ -43,6 +43,15 @@
       {
         "link-name": "off"
       }
+    ],
+    "compat-api/css": [
+      "default",
+      {
+        "ignore": [
+          "overflow-clip-margin",
+          "overflow: clip"
+        ]
+      }
     ]
   }
 }
